; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_rawsock.c_rawsock_send_probe.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_rawsock.c_rawsock_send_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Adapter = type { i32 }
%struct.TemplateSet = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rawsock_send_probe(%struct.Adapter* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, %struct.TemplateSet* %7) #0 {
  %9 = alloca %struct.Adapter*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.TemplateSet*, align 8
  %17 = alloca [2048 x i8], align 16
  %18 = alloca i64, align 8
  store %struct.Adapter* %0, %struct.Adapter** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store %struct.TemplateSet* %7, %struct.TemplateSet** %16, align 8
  %19 = load %struct.TemplateSet*, %struct.TemplateSet** %16, align 8
  %20 = load i32, i32* %10, align 4
  %21 = load i32, i32* %11, align 4
  %22 = load i32, i32* %12, align 4
  %23 = load i32, i32* %13, align 4
  %24 = load i32, i32* %14, align 4
  %25 = getelementptr inbounds [2048 x i8], [2048 x i8]* %17, i64 0, i64 0
  %26 = call i32 @template_set_target(%struct.TemplateSet* %19, i32 %20, i32 %21, i32 %22, i32 %23, i32 %24, i8* %25, i32 2048, i64* %18)
  %27 = load %struct.Adapter*, %struct.Adapter** %9, align 8
  %28 = getelementptr inbounds [2048 x i8], [2048 x i8]* %17, i64 0, i64 0
  %29 = load i64, i64* %18, align 8
  %30 = trunc i64 %29 to i32
  %31 = load i32, i32* %15, align 4
  %32 = call i32 @rawsock_send_packet(%struct.Adapter* %27, i8* %28, i32 %30, i32 %31)
  ret void
}

declare dso_local i32 @template_set_target(%struct.TemplateSet*, i32, i32, i32, i32, i32, i8*, i32, i64*) #1

declare dso_local i32 @rawsock_send_packet(%struct.Adapter*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
